// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Portal Default 1`] = `
<portal-dummy>
  <p
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
  >
    This element is moved to the bottom of the body tag
  </p>
</portal-dummy>
`;

exports[`Storyshots Atoms | Portal If attachTo prop is not a HTMLElement then nothing is rendered 1`] = `
<div
  id="origin"
>
  <portal-dummy>
    <p
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      This element should not be rendered
    </p>
  </portal-dummy>
</div>
`;

exports[`Storyshots Atoms | Portal Portal to specified destination 1`] = `
<div
  id="destination"
/>
`;
